c2 main text change

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Self.nasu</h1>
-      <p>This Website is Owned by <span class="typed" data-typed-items="Nasu., Naman Jain,"></span></p>
+      <p>Owned by <span class="typed" data-typed-items="Nasu., Naman.,"></span></p>
       <p>Work Under Progress......</p>
     </div>
   </section><!-- End Hero -->
