--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <!-- google ads linking-->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8389169647852797"
+     crossorigin="anonymous"></script>
+
 </head>
 
 <body>
