--- a/index.html
+++ b/index.html
@@ -28,10 +28,16 @@
   <!-- google ads linking-->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8389169647852797"
      crossorigin="anonymous"></script>
-
+     <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
 </head>
 
 <body>
+
+  <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-8389169647852797">
+</amp-auto-ads>
 
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
