--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                 </div>
             </div>
             <div class="cont-form-hold">
-                <form class="cont-form">
+                <form class="cont-form" action="send.php" method="post">
                     <div class="et-hold1">
                         <div class="form-group">
                             <input type="text" id="first-name" name="first-name" class="form-input"
