--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             </div>
             <div class="sr-cards-holder">
                 <div class="sr-card">
-                    <a class="sr-cd" href="">
+                    <a class="sr-cd" href="files/webdev.html">
                         <img class="cd-icon1"
                             src="https://media.discordapp.net/attachments/1110268705537003610/1110395234149482526/web_devep_card.png?">
                         <span class="sr-cd-span1 card-h">Web Development</span>
