web devep mobile responsive

--- a/files/webdev.html
+++ b/files/webdev.html
@@ -41,6 +41,7 @@
 
     <section> <!-- My css linking -->
         <link rel="stylesheet" href="/css/webdevstyle.css">
+        <link rel="stylesheet" href="/css/webdevresponsive.css">
     </section>
 
     <section> <!-- javascript linking -->
@@ -61,7 +62,7 @@
                 </a>
             </div>
 
-            <div class="container-fluid d-flex align-items-center justify-content-end">
+            <div class="container-fluid d-flex align-items-center justify-content-end nav-right">
               <!-- Links -->
               <ul class="navbar-nav align-items-center d-flex fs-5">
                 <li class="nav-item">
@@ -126,13 +127,6 @@
                 <td><a href="https://github.com/Self-nasu/protfolio.github.io/archive/refs/heads/main.zip" class="text-dark" download><i class="tb-icon bi bi-download"></i></a></td>
                 <td><button class="cp-btn" onclick="copyText('copy3')"><i id="icons" class="tb-icon bi bi-clipboard"></i></button></td>
               </tr>
-              <tr>
-                <th scope="row">4</th>
-                <td>My Works Website</td>
-                <td><a target="_blank" href="#" class="text-dark"><i class="tb-icon bi bi-eye"></i></a></td>
-                <td><a href="https://github.com/Self-nasu/mywork.github.io/archive/refs/heads/main.zip" class="text-dark" download><i class="tb-icon bi bi-download"></i></a></td>
-                <td><button class="cp-btn" onclick="copyText('copy4')"><i id="icons" class="tb-icon bi bi-clipboard"></i></button></td>
-              </tr>
             </tbody>
           </table>
     </section>
@@ -141,28 +135,22 @@
         <span id="copy1">https://github.com/Self-nasu/nasu.github.io.git</span>
         <span id="copy2">https://github.com/Self-nasu/nasustudios.github.io.git</span>
         <span id="copy3">https://github.com/Self-nasu/protfolio.github.io.git</span>
-        <span id="copy4">https://github.com/Self-nasu/mywork.github.io.git</span>
     </div>
 
-    <section class="popular">
-
-    </section>
-
     <footer class="web-footer">
-        <div class="container-fluid bg-info p-2">
-            <div class="row">
-                <div class="col-lg-6 text-lg-start text-center">
+        <div class="container-fluid bg-info p-2 ftdivmain">
+            
+                <div class="col-lg-6 text-lg-start text-center ftdiv1">
                     <span>All rights reserved by Naman Jain 2024.</span>
                 </div>
                 
-                <div class="col-lg-6 text-lg-end text-center mb-3 mb-lg-0">
-                    <a class="text-dark p-2" href="https://github.com/self-nasu"><i class="bi bi-github"></i></a>
-                    <a class="text-dark p-2" href="https://www.instagram.com/self.nasu/"><i class="bi bi-instagram"></i></a>
-                    <a class="text-dark p-2" href="https://www.linkedin.com/in/nasu1708/"><i class="bi bi-linkedin"></i></a>
-                    <a class="text-dark p-2" href="https://www.facebook.com/profile.php?id=100092486165369"><i class="bi bi-facebook"></i></a>
-                    <span>Mobile: +91 7877452256</span>
+                <div class="col-lg-6 text-lg-end text-center mb-3 mb-lg-0 ftdiv2">
+                    <a class="text-dark p-2 ft-icons" href="https://github.com/self-nasu"><i class="bi bi-github"></i></a>
+                    <a class="text-dark p-2 ft-icons" href="https://www.instagram.com/self.nasu/"><i class="bi bi-instagram"></i></a>
+                    <a class="text-dark p-2 ft-icons" href="https://www.linkedin.com/in/nasu1708/"><i class="bi bi-linkedin"></i></a>
+                    <a class="text-dark p-2 ft-icons" href="https://www.facebook.com/profile.php?id=100092486165369"><i class="bi bi-facebook"></i></a>
+                    <span class="mobile">Mobile: +91 7877452256</span>
                 </div>
-            </div>
           </div>
     </footer>
 </body>
