animation card added

--- a/files/webdev.html
+++ b/files/webdev.html
@@ -72,12 +72,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark hover" href="#">
+                    <a class="nav-link text-dark hover" href="https://github.com/self-nasu">
                         <i class="bi bi-github"></i>
                         <span class="p-2">GitHub</span>
                     </a>
                 </li><li class="nav-item">
-                    <a class="nav-link text-dark hover" href="#">
+                    <a class="nav-link text-dark hover" href="https://www.linkedin.com/in/nasu1708/">
                         <i class="bi bi-linkedin"></i>
                         <span class="p-2">Linkedin</span>
                     </a>
