--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                     </a>
                 </div>
                 <div class="sr-card">
-                    <a class="sr-cd" href="">
+                    <a class="sr-cd" href="files/animation.html">
                         <img class="cd-icon3"
                             src="https://media.discordapp.net/attachments/1110268705537003610/1110395234476630016/animation_card.png?">
                         <span class="sr-cd-span3 card-h">3D Animation</span>
