mb nav social links

--- a/index.html
+++ b/index.html
@@ -134,16 +134,16 @@
                                 <a>Naman jain</a>
                             </div>
                             <div class="nav-social-hod">
-                                <a href="">
+                                <a href="https://www.instagram.com/self.nasu/">
                                     <i class="bi bi-instagram sdnav-icon"></i>
                                 </a>
-                                <a href="">
+                                <a href="https://www.linkedin.com/in/nasu1708/">
                                     <i class="bi bi-linkedin sdnav-icon"></i>
                                 </a>
-                                <a href="">
+                                <a href="https://www.facebook.com/profile.php?id=100092486165369">
                                     <i class="bi bi-facebook sdnav-icon"></i>
                                 </a>
-                                <a href="">
+                                <a href="https://github.com/self-nasu">
                                     <i class="bi bi-github sdnav-icon"></i>
                                 </a>
                             </div>
