--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 </a>
                             </li>
                             <li class="nav-items animate__animated animate__flipInX animate__delay-0s">
-                                <a class="nav-it-a" href="https://self-nasu.github.io/nasustudios.github.io/">
+                                <a class="nav-it-a" href="https://studio.nasu.live">
                                     <img class="nav-logo"
                                         src="https://media.discordapp.net/attachments/1106482658449555516/1110048164725133312/nasu_studios.png?">
                                     <span>Nasu studios</span>
@@ -177,7 +177,7 @@
                             </a>
                         </li>
                         <li class="nav-items animate__animated animate__flipInX animate__delay-0.5s">
-                            <a class="nav-it-a" href="https://self-nasu.github.io/nasustudios.github.io/">
+                            <a class="nav-it-a" href="https://studio.nasu.live">
                                 <img class="nav-logo"
                                     src="https://media.discordapp.net/attachments/1106482658449555516/1110048164725133312/nasu_studios.png?">
                                 <span>Nasu studios</span>
