--- a/index.html
+++ b/index.html
@@ -72,36 +72,29 @@
                             <li class="nav-items animate__animated animate__flipInX animate__delay-0s ">
                                 <a class="nav-it-a" href="#home">
                                     <img class="nav-logo"
-                                        src="https://media.discordapp.net/attachments/1106482658449555516/1110048165362667540/home2.png?">
+                                        src="assets/other/home2.png">
                                     <span>Home</span>
                                 </a>
                             </li>
                             <li class="nav-items animate__animated animate__flipInX animate__delay-0s">
                                 <a class="nav-it-a" href="#about">
                                     <img class="nav-logo"
-                                        src="https://media.discordapp.net/attachments/1106482658449555516/1110048165131976714/about2.png?">
+                                        src="assets/other/about2.png">
                                     <span>About</span>
                                 </a>
                             </li>
                             <li class="nav-items animate__animated animate__flipInX animate__delay-0s">
                                 <a class="nav-it-a" href="#portfolio">
                                     <img class="nav-logo"
-                                        src="https://media.discordapp.net/attachments/1106482658449555516/1110048163903062056/portfoilo_2.png?">
+                                        src="assets/other/portfoilo_2.png">
                                     <span>Portfolio</span>
                                 </a>
                             </li>
                             <li class="nav-items animate__animated animate__flipInX animate__delay-0s">
                                 <a class="nav-it-a" href="#contact">
                                     <img class="nav-logo"
-                                        src="https://media.discordapp.net/attachments/1106482658449555516/1110048164934860922/contact24.png?">
+                                        src="assets/other/contact24.png">
                                     <span>Contact</span>
-                                </a>
-                            </li>
-                            <li class="nav-items animate__animated animate__flipInX animate__delay-0s">
-                                <a class="nav-it-a" href="https://studio.nasu.live">
-                                    <img class="nav-logo"
-                                        src="https://media.discordapp.net/attachments/1106482658449555516/1110048164725133312/nasu_studios.png?">
-                                    <span>Nasu studios</span>
                                 </a>
                             </li>
                         </ul>
@@ -130,7 +123,7 @@
                     <ul id="navshow-mb" class="animate__animated animate__fadeInLeft">
                         <div class="profile">
                             <div class="img-hold">
-                                <img src="https://media.discordapp.net/attachments/1106481810273206293/1109651348116492429/myimg4.png?">
+                                <img src="assets/other/myimg4.png">
                                 <a>Naman jain</a>
                             </div>
                             <div class="nav-social-hod">
@@ -151,36 +144,29 @@
                         <li class="nav-items animate__animated animate__flipInX animate__delay-0.5s ">
                             <a class="nav-it-a" href="#home">
                                 <img class="nav-logo"
-                                    src="https://media.discordapp.net/attachments/1106482658449555516/1110048165362667540/home2.png?">
+                                    src="assets/other/home2.png">
                                 <span>Home</span>
                             </a>
                         </li>
                         <li class="nav-items animate__animated animate__flipInX animate__delay-0.5s">
                             <a class="nav-it-a" href="#about">
                                 <img class="nav-logo"
-                                    src="https://media.discordapp.net/attachments/1106482658449555516/1110048165131976714/about2.png?">
+                                    src="assets/other/about2.png">
                                 <span>About</span>
                             </a>
                         </li>
                         <li class="nav-items animate__animated animate__flipInX animate__delay-0.5s">
                             <a class="nav-it-a" href="#portfolio">
                                 <img class="nav-logo"
-                                    src="https://media.discordapp.net/attachments/1106482658449555516/1110048163903062056/portfoilo_2.png?">
+                                    src="assets/other/portfoilo_2.png">
                                 <span>Portfolio</span>
                             </a>
                         </li>
                         <li class="nav-items animate__animated animate__flipInX animate__delay-0.5s">
                             <a class="nav-it-a" href="#contact">
                                 <img class="nav-logo"
-                                    src="https://media.discordapp.net/attachments/1106482658449555516/1110048164934860922/contact24.png?">
+                                    src="assets/other/contact24.png">
                                 <span>Contact</span>
-                            </a>
-                        </li>
-                        <li class="nav-items animate__animated animate__flipInX animate__delay-0.5s">
-                            <a class="nav-it-a" href="https://studio.nasu.live">
-                                <img class="nav-logo"
-                                    src="https://media.discordapp.net/attachments/1106482658449555516/1110048164725133312/nasu_studios.png?">
-                                <span>Nasu studios</span>
                             </a>
                         </li>
                     </ul>
@@ -216,7 +202,6 @@
 
             </div>
             <div class="land-right">
-                <img src="">
             </div>
         </div>
 
@@ -226,7 +211,7 @@
         <!-- start of about section -->
         <div class="about-holder sec-gap" id="about-holder">
             <div class="ab-left">
-                <img src="https://media.discordapp.net/attachments/1106481810273206293/1109651348116492429/myimg4.png?">
+                <img src="assets/other/myimg4.png">
             </div>
             <div class="ab-right">
                 <div class="ab-txt1">
@@ -247,7 +232,7 @@
                 </div>
                 <div class="ab-txt4">
                     <a class="ab-div4 button-d"
-                        href="https://cdn.discordapp.com/attachments/1107621705301643344/1107622574977990656/link_resume_online.pdf"
+                        href="assets/other/resume.pdf"
                         download="">Download CV</a>
                 </div>
             </div>
@@ -267,9 +252,9 @@
             </div>
             <div class="sr-cards-holder">
                 <div class="sr-card">
-                    <a class="sr-cd" href="https://work.nasu.live/">
+                    <a class="sr-cd" href="">
                         <img class="cd-icon1"
-                            src="https://media.discordapp.net/attachments/1110268705537003610/1110395234149482526/web_devep_card.png?">
+                            src="assets/other/web_devep_card.png">
                         <span class="sr-cd-span1 card-h">Web Development</span>
                         <span class="cd-sp1-show card-txt nor-font animate__animated animate__fadeInDown animate__delay-0s">I make awsome website desings based on UI/UX. Vist
                             the page to know more.</span>
@@ -278,7 +263,7 @@
                 <div class="sr-card">
                     <a class="sr-cd" href="">
                         <img class="cd-icon2"
-                            src="https://media.discordapp.net/attachments/1110268705537003610/1110395234745073674/GFX_card.png?">
+                            src="assets/other/GFX_card.png">
                         <span class="sr-cd-span2 card-h">GFX Desings</span>
                         <span class="cd-sp2-show card-txt nor-font animate__animated animate__fadeInDown animate__delay-0s">I make GFX for professional ceators at Nasu studios.
                             Vist the page to know more.</span>
@@ -287,7 +272,7 @@
                 <div class="sr-card">
                     <a class="sr-cd" href="">
                         <img class="cd-icon3"
-                            src="https://media.discordapp.net/attachments/1110268705537003610/1110395234476630016/animation_card.png?">
+                            src="assets/other/animation_card.png">
                         <span class="sr-cd-span3 card-h">3D Animation</span>
                         <span class="cd-sp3-show card-txt  nor-font animate__animated animate__fadeInDown animate__delay-0s">I also make cartoon based 3D aimations using
                             blender. Vist the page to Know more.</span>
@@ -328,13 +313,23 @@
                             </thead>
                             <tbody>
                                 <tr>
+                                    <td>MCA 1st year</td>
+                                    <td>Sir Padampat Singhania University</td>
+                                    <td class="td-3">SPSU</td>
+                                    <td>2024</td>
+                                    <td><a class="td-link"
+                                            href="assets/results/mcasem2.pdf"
+                                            download="MCA_sem2"><i class="bi bi-file-earmark-arrow-down-fill"></i></a>
+                                    </td>
+                                </tr>
+                                <tr>
                                     <td>BCA</td>
                                     <td>Mohanlal Sukhadia University</td>
                                     <td class="td-3">MSLU</td>
                                     <td>2023</td>
                                     <td><a class="td-link"
-                                            href="https://media.discordapp.net/attachments/1107621705301643344/1110465673009823765/naman_jain_BCA2_year.jpg?"
-                                            download="bca2year"><i class="bi bi-file-earmark-arrow-down-fill"></i></a>
+                                            href="assets/results/bca3year.pdf"
+                                            download="BCA_final"><i class="bi bi-file-earmark-arrow-down-fill"></i></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -343,8 +338,8 @@
                                     <td class="td-3">GSEB</td>
                                     <td>2020</td>
                                     <td><a class="td-link"
-                                            href="https://media.discordapp.net/attachments/1107621705301643344/1110465673622212711/naman_jain_class_12th.jpg?"
-                                            download><i class="bi bi-file-earmark-arrow-down-fill"></i></a></td>
+                                            href="assets/results/naman jain class 12th.jpg"
+                                            download="12thresult"><i class="bi bi-file-earmark-arrow-down-fill"></i></a></td>
                                 </tr>
                                 <tr>
                                     <td>10<sup class="sup">th</sup></td>
@@ -352,8 +347,8 @@
                                     <td class="td-3">GSEB</td>
                                     <td>2018</td>
                                     <td><a class="td-link"
-                                            href="https://media.discordapp.net/attachments/1107621705301643344/1110465673278271558/naman_jain_class_10th.jpg?"
-                                            download=""><i class="bi bi-file-earmark-arrow-down-fill"></i></a></td>
+                                            href="assets/results/naman jain class 10th.jpg"
+                                            download="10thresult"><i class="bi bi-file-earmark-arrow-down-fill"></i></a></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -376,6 +371,16 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                <tr>
+                                    <td>college Professor</td>
+                                    <td>Web Developer Intern</td>
+                                    <td>6 month</td>
+                                </tr>
+                                <tr>
+                                    <td>Code clause</td>
+                                    <td>Web Developer Intern</td>
+                                    <td>1 month</td>
+                                </tr>
                                 <tr>
                                     <td>Dev Kirana Store</td>
                                     <td>Account/staff management</td>
@@ -452,17 +457,16 @@
                 <div class="touch-butt">
                     <div class="add icons">
                         <i class="bi bi-geo-alt-fill"></i>
-                        <a>Udaipur, Rajasthan.</a>
+                        <a> Udaipur, Rajasthan.</a>
                         <a>Pincode:313702</a>
                     </div>
                     <div class="email icons">
                         <i class="bi bi-envelope-fill"></i>
                         <a>namanjain2002qw@gmail.com</a>
-                        <a>nasuchacha1708@gmail.com</a>
+                        <a>naman.mca2023@spsu.ac.in</a>
                     </div>
                     <div class="phone icons">
                         <i class="bi bi-telephone-outbound-fill"></i>
-                        <a href="tel:+91 7877452256">+91 7877452256</a>
                         <a href="tel:+91 8905924424">+91 8905924424</a>
                     </div>
                 </div>
